--- a/FlatIronApp/Gemfile
+++ b/FlatIronApp/Gemfile
@@ -3,6 +3,10 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby '2.3.3'
 
+#jquery for bootstrap
+gem 'jquery-rails'
+#bootstrap
+gem 'bootstrap', '~> 4.1.3'
 #Use bcrypt as authentication
 gem 'bcrypt'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
